JOIN statement is working and returning results but unable to format to table

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "seed": "node ./db/seeds.sql"
   },
   "keywords": [],
-  "author": "",
+  "author": "Keri Sen",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
