--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "keywords": [],
   "author": "Keri Sen",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "inquirer": "^8.2.4",
     "mysql2": "^3.9.1"
