--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "inquirer": "^8.2.4",
+    "inquirer-press-to-continue": "^1.2.0",
     "mysql2": "^3.9.1"
   },
   "devDependences": {
